--- a/src/styles/Designs.css
+++ b/src/styles/Designs.css
@@ -26,7 +26,7 @@
 }
 
 .back-btn{
-  margin-top: 340px;
+  margin-top: 20vh;
   background-color: aliceblue;
   padding: 5px 10px;
   border: 0;
