--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,5 +1,5 @@
 .Projects{
-  margin-top: 100px;
+  margin-top: 20vh;
   padding-top: 50px;
   padding-bottom: 50px;
   height: fit-content;
